update logic generate html